force-app/main/default/objects/OrderItem/fields/Applied_Price_Source__c.field-meta.xml
<CustomField>
    <fullName>Applied_Price_Source__c</fullName>
    <label>Applied Price Source</label>
    <type>Picklist</type>
    <description>Which pricing mechanism produced the applied price (audit). See ADR-0002 / decisions-log OrderItem.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Base_Price</fullName><default>true</default><label>Base Price</label></value>
            <value><fullName>Customer_Override</fullName><default>false</default><label>Customer Override</label></value>
            <value><fullName>Volume_Tier</fullName><default>false</default><label>Volume Tier</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>