force-app/main/default/objects/OrderItem/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>The base segment-Pricebook unit price before any override/tier, captured for audit. See ADR-0002.</description>
</CustomField>