force-app/main/default/objects/OrderItem/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <type>Currency</type>
    <formula>BLANKVALUE(Base_Price__c, 0) - UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <description>Per-unit discount applied = Base_Price__c - UnitPrice. Calculated formula. See ADR-0002 / decisions-log OrderItem.</description>
</CustomField>