force-app/main/default/objects/OrderItem/fields/Price_Modifier_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Modifier_Id__c</fullName>
    <label>Price Modifier Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Soft reference (record Id) to the Customer_Price__c or Price_Tier__c that produced the applied price. Text, not a foreign key, because it can point to either object (audit). See ERD note.</description>
</CustomField>